--- a/index.html
+++ b/index.html
@@ -206,6 +206,15 @@
               <li class="nav-item">
                 <a href="mailto:contact@adnagile.com" class="nav-link-item">A propos</a>
               </li>
+              <li class="nav-item">
+                <a href="mailto:contact@adnagile.com" class="nav-link-item">Notre équipe</a>
+              </li>
+              <li class="nav-item">
+                <a href="mailto:contact@adnagile.com" class="nav-link-item">Notre philosophie</a>
+              </li>
+              <li class="nav-item">
+                <a href="mailto:contact@adnagile.com" class="nav-link-item">Notre histoire</a>
+              </li>
               <!--
               <li class="nav-item nav-item-has-children">
                 <a href="#" class="nav-link-item drop-trigger">Pages <i class="fas fa-angle-down"></i></a>
@@ -375,8 +384,8 @@
         </div>
 
         <div class="header-btn header-btn-l1 ms-auto d-none d-xs-inline-flex">
-          <a class="sofax-default-btn pill sofax-header-btn" data-text="Contact Us" href="mailto:contact@adnagile.com">
-            <span class="button-wraper">Contact Us</span>
+          <a class="sofax-default-btn pill sofax-header-btn" data-text="E-mail" href="mailto:contact@adnagile.com">
+            <span class="button-wraper">Nous contacter</span>
           </a>
         </div>
    
