--- a/terms&condition.html
+++ b/terms&condition.html
@@ -63,16 +63,16 @@
   <!-- End All Js -->
 
 
-<!--
-  <header class="site-header sofax-header-section site-header--menu-center inner-header dark-bg" id="sticky-menu">
+  <header class="site-header sofax-header-section site-header--menu-center" id="sticky-menu">
     <div class="container">
       <nav class="navbar site-navbar">
 
         <div class="brand-logo">
           <a href="index.html">
-            <img src="assets/images/logo/logo-white.svg" alt="" class="light-version-logo">
+            <img src="assets/images/v5/Logo RM.png" alt="" class="light-version-logo" style="max-width: 90px;">
           </a>
         </div>
+
         <div class="menu-block-wrapper">
           <div class="menu-overlay"></div>
           <nav class="menu-block" id="append-menu-header">
@@ -85,304 +85,40 @@
             </div>
             <ul class="site-menu-main">
               <li class="nav-item nav-item-has-children">
-                <a href="#" class="nav-link-item drop-trigger">Demos <i class="fas fa-angle-down"></i></a>
-                <ul class="sub-menu" id="submenu-1">
-                  <li class="sub-menu--item nav-item-has-children">
-                    <a href="#" data-menu-get="h3" class="drop-trigger">Multipage<i class="fas fa-angle-down"></i>
-                    </a>
-                    <ul class="sub-menu shape-none" id="submenu-3">
-                      <li class="sub-menu--item">
-                        <a href="index.html">
-                          <span class="menu-item-text">Sales Management</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="index-02.html">
-                          <span class="menu-item-text">Cripto App</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="index-03.html">
-                          <span class="menu-item-text">Team Management</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="index-04.html">
-                          <span class="menu-item-text">Social Agency</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="index-05.html">
-                          <span class="menu-item-text">Digital Agency</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="index-06.html">
-                          <span class="menu-item-text">CRM</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="index-07.html">
-                          <span class="menu-item-text">AI SAAS</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="index-08.html">
-                          <span class="menu-item-text">IT services</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="index-09.html">
-                          <span class="menu-item-text">Email Marketing</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="index-10.html">
-                          <span class="menu-item-text">Web Hosting</span>
-                        </a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="sub-menu--item nav-item-has-children">
-                    <a href="#" data-menu-get="h3" class="drop-trigger">OnePage <i class="fas fa-angle-down"></i></a>
-                    <ul class="sub-menu shape-none" id="submenu-2">
-                      <li class="sub-menu--item">
-                        <a href="index-op-01.html">
-                          <span class="menu-item-text">Sales Management</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="index-op-02.html">
-                          <span class="menu-item-text">Cripto App</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="index-op-03.html">
-                          <span class="menu-item-text">Team Management</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="index-op-04.html">
-                          <span class="menu-item-text">Social Agency</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="index-op-05.html">
-                          <span class="menu-item-text">Digital Agency</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="index-op-06.html">
-                          <span class="menu-item-text">CRM</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="index-op-07.html">
-                          <span class="menu-item-text">AI SAAS</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="index-op-08.html">
-                          <span class="menu-item-text">IT services</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="index-op-09.html">
-                          <span class="menu-item-text">Email Marketing</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="index-op-10.html">
-                          <span class="menu-item-text">Web Hosting</span>
-                        </a>
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
+
+              <li class="nav-item">
+                <a href="mailto:contact@adnagile.com" class="nav-link-item">A propos</a>
               </li>
               <li class="nav-item">
-                <a href="about-us.html" class="nav-link-item">About Us</a>
-              </li>
-              <li class="nav-item nav-item-has-children">
-                <a href="#" class="nav-link-item drop-trigger">Pages <i class="fas fa-angle-down"></i></a>
-                <ul class="sub-menu" id="submenu-4">
-                  <li class="sub-menu--item">
-                    <a href="about-us.html">
-                      <span class="menu-item-text">About Us</span>
-                    </a>
-                  </li>
-                  <li class="sub-menu--item">
-                    <a href="pricing.html">
-                      <span class="menu-item-text">Pricing</span>
-                    </a>
-                  </li>
-                  <li class="sub-menu--item nav-item-has-children">
-                    <a href="#" data-menu-get="h3" class="drop-trigger">blog <i class="fas fa-angle-down"></i></a>
-                    <ul class="sub-menu shape-none" id="submenu-5">
-                      <li class="sub-menu--item">
-                        <a href="blog.html">
-                          <span class="menu-item-text">Blog </span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="single-blog.html">
-                          <span class="menu-item-text">blog details</span>
-                        </a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="sub-menu--item nav-item-has-children">
-                    <a href="#" data-menu-get="h3" class="drop-trigger">Service<i class="fas fa-angle-down"></i>
-                    </a>
-                    <ul class="sub-menu shape-none" id="submenu-6">
-                      <li class="sub-menu--item">
-                        <a href="service.html">
-                          <span class="menu-item-text">service</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="single-service.html">
-                          <span class="menu-item-text">service details</span>
-                        </a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="sub-menu--item nav-item-has-children">
-                    <a href="#" data-menu-get="h3" class="drop-trigger">Team<i class="fas fa-angle-down"></i>
-                    </a>
-                    <ul class="sub-menu shape-none" id="submenu-7">
-                      <li class="sub-menu--item">
-                        <a href="team.html">
-                          <span class="menu-item-text">team</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="single-team.html">
-                          <span class="menu-item-text">team details</span>
-                        </a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="sub-menu--item nav-item-has-children">
-                    <a href="#" data-menu-get="h3" class="drop-trigger">Career<i class="fas fa-angle-down"></i>
-                    </a>
-                    <ul class="sub-menu shape-none" id="submenu-8">
-                      <li class="sub-menu--item">
-                        <a href="career.html">
-                          <span class="menu-item-text">Career</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="single-career.html">
-                          <span class="menu-item-text">Career details</span>
-                        </a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="sub-menu--item nav-item-has-children">
-                    <a href="#" data-menu-get="h3" class="drop-trigger">Portfolio<i class="fas fa-angle-down"></i>
-                    </a>
-                    <ul class="sub-menu shape-none" id="submenu-9">
-                      <li class="sub-menu--item">
-                        <a href="portfolio-01.html">
-                          <span class="menu-item-text">Our Portfolio</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="single-portfolio.html">
-                          <span class="menu-item-text">Portfolio Details</span>
-                        </a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="sub-menu--item nav-item-has-children">
-                    <a href="#" data-menu-get="h3" class="drop-trigger">Utility<i class="fas fa-angle-down"></i>
-                    </a>
-                    <ul class="sub-menu shape-none" id="submenu-10">
-                      <li class="sub-menu--item">
-                        <a href="faq.html">
-                          <span class="menu-item-text">faq</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="404.html">
-                          <span class="menu-item-text">404</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="coming-soon.html">
-                          <span class="menu-item-text">Coming Soon</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="terms&condition.html">
-                          <span class="menu-item-text">Terms & Condition</span>
-                        </a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="sub-menu--item nav-item-has-children">
-                    <a href="#" data-menu-get="h3" class="drop-trigger">Account<i class="fas fa-angle-down"></i>
-                    </a>
-                    <ul class="sub-menu shape-none" id="submenu-11">
-                      <li class="sub-menu--item">
-                        <a href="sign-up.html">
-                          <span class="menu-item-text">sign up</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="sign-in.html">
-                          <span class="menu-item-text">sign in</span>
-                        </a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="reset-password.html">
-                          <span class="menu-item-text">reset password</span>
-                        </a>
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-              </li>
-              <li class="nav-item nav-item-has-children">
-                <a href="#" class="nav-link-item drop-trigger">Blog <i class="fas fa-angle-down"></i></a>
-                <ul class="sub-menu" id="submenu-12">
-                  <li class="sub-menu--item">
-                    <a href="blog.html">
-                      <span class="menu-item-text">blog</span>
-                    </a>
-                  </li>
-                  <li class="sub-menu--item">
-                    <a href="single-blog.html">
-                      <span class="menu-item-text">blog Details</span>
-                    </a>
-                  </li>
-                </ul>
+                <a href="service.html" class="nav-link-item">Nos services</a>
               </li>
               <li class="nav-item">
-                <a href="contact-us.html" class="nav-link-item">Contact Us</a>
+                <a href="mailto:contact@adnagile.com" class="nav-link-item">Notre philosophie</a>
               </li>
-            </ul>
+              <li class="nav-item">
+                <a href="mailto:contact@adnagile.com" class="nav-link-item">Notre histoire</a>
+              </li>
           </nav>
         </div>
+
         <div class="header-btn header-btn-l1 ms-auto d-none d-xs-inline-flex">
-          <a class="sofax-default-btn pill sofax-header-btn" data-text="Get started" href="contact-us.html">
-            <span class="button-wraper">Contact Us</span>
+          <a class="sofax-default-btn pill sofax-header-btn" data-text="E-mail" href="mailto:contact@adnagile.com">
+            <span class="button-wraper">Nous contacter</span>
           </a>
         </div>
-
-        <div class="mobile-menu-trigger light">
+   
+        <div class="mobile-menu-trigger ">
           <span></span>
         </div>
 
       </nav>
     </div>
   </header>
--->
+
 
   <div class="sofax-breadcrumb">
     <div class="container">
-      <h1 class="post__title">Moentions légales</h1>
+      <h1 class="post__title">Mentions légales</h1>
       <nav class="breadcrumbs">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -450,12 +186,11 @@
 
   <footer class="sofax-footer-section">
     <div class="container">
-      <!--
       <div class="sofax-footer-titlev5 position-ralatiove">
         <div class="row">
           <div class="col-xl-8 col-lg-8">
             <div class="tg-heading-subheading animation-style3">
-              <h2>Let's embark on a digital journey together!</h2>
+              <h2>Faites confiance à notre expertise pour vous accompagner tout au long de ce parcours digital.</h2>
             </div>
             <div class="sofax-footer-shapev5">
               <img src="assets/images/v5/shape1.png" alt="">
@@ -475,13 +210,14 @@
           </div>
         </div>
       </div>
-      -->
       <div class="sofax-footer-top">
         <div class="row">
           <div class="col-xl-4 col-md-12">
             <div class="sofax-footer-wrap mr-25">
-              <a href="index.html"><img src="assets/images/logo/logo-dark.svg" alt=""></a>
-              <p>Sofax has many plans for the future to work with great clients and continue to work with agencies.</p>
+              <a href="index.html"><img src="assets/images/v5/logo.jpeg" alt=""></a>
+              <p>Envie d'explorer le monde Crm, de préparer votre voyage ?
+                ADN Agile sera votre sherpa</p>
+                <!--
               <div class="sofax-social-icon">
                 <ul>
                   <li>
@@ -518,48 +254,50 @@
                   </li>
                 </ul>
               </div>
+              -->
             </div>
           </div>
           <div class="col-xl-3 col-md-4">
             <div class="sofax-footer-menu ml-50">
               <h5>Company</h5>
               <ul>
-                <li><a href="about-us.html">About Us</a></li>
-                <li><a href="contact-us.html">Contact US</a></li>
-                <li><a href="contact-us.html">Privacy Policy</a></li>
-                <li><a href="terms&condition.html">Terms & Conditions</a></li>
+                <li><a href="mailto:contact@adnagile.com">A propos</a></li>
+                <li><a href="mailto:contact@adnagile.com">Nous contacter</a></li>
+                <li><a href="terms&condition.html">Mentions legales</a></li>
               </ul>
             </div>
           </div>
+
           <div class="col-xl-2 col-md-4">
             <div class="sofax-footer-menu">
-              <h5>Utility pages</h5>
+              <h5>Nos certifications</h5>
               <ul>
-                <li><a href="contact-us.html">Instructions</a></li>
-                <li><a href="contact-us.html">Style guide</a></li>
-                <li><a href="404.html">404 Pages</a></li>
-                <li><a href="contact-us.html">Licenses</a></li>
+                <li><img src="assets/images/v5/Crm Premium.jpg" alt=""></li>
+
               </ul>
             </div>
           </div>
+          
           <div class="col-xl-3 col-md-4">
             <div class="sofax-footer-menu">
-              <h5>Subscribe to our newsletter</h5>
+              <h5>Nous contacter</h5>
               <div class="sofax-subscription-field5">
                 <form action="#">
-                  <input type="email" placeholder="Enter your email">
-                  <button class="sofax-subcribe-btn2">Subscribe now</button>
+                  <input type="email" placeholder="Votre email">
+                  <a href="mailto:contact@adnagile.com"></a><button class="sofax-subcribe-btn2">Envoyer</button>
                 </form>
               </div>
             </div>
           </div>
+
         </div>
       </div>
       <div class="sofax-footer-bottom center">
-        <p>© 2024 Mthemeus All Rights Reserved.</p>
+        <p>© 2024 AdnAgile</p>
       </div>
     </div>
   </footer>
+
 
 
 
