--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <li class="nav-item nav-item-has-children">
 
               <li class="nav-item">
-                <a href="mailto:contact@adnagile.com" class="nav-link-item">A propos</a>
+                <a href="about-us.html" class="nav-link-item">A propos</a>
               </li>
               <li class="nav-item">
                 <a href="service.html" class="nav-link-item">Nos services</a>
@@ -125,7 +125,7 @@
         <p>ADN Agile vous accompagne sur toute la durée
           Intégration & Exploitation de votre CRM 
           </p> 
-          <img src="assets/images/v5/Crm Premium.jpg" alt="" style="max-width: 150px;">
+          <img src="assets/images/v5/Crm Premium.jpg" alt="" style="max-width: 350px;">
         <div class="sofax-hero5-shape1">
           <img src="assets/images/v5/shape1.png" alt="">
         </div>
