--- a/terms&condition.html
+++ b/terms&condition.html
@@ -87,7 +87,7 @@
               <li class="nav-item nav-item-has-children">
 
               <li class="nav-item">
-                <a href="mailto:contact@adnagile.com" class="nav-link-item">A propos</a>
+                <a href="about-us.html" class="nav-link-item">A propos</a>
               </li>
               <li class="nav-item">
                 <a href="service.html" class="nav-link-item">Nos services</a>
