--- a/about-us.html
+++ b/about-us.html
@@ -121,7 +121,7 @@
       <h1 class="post__title">A propos</h1>
       <nav class="breadcrumbs">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><img src="assets/images/about/arrow.png" alt=""></li>
           <li aria-current="page"> A propos</li>
         </ul>
