--- a/service.html
+++ b/service.html
@@ -122,9 +122,9 @@
       <h1 class="post__title">services</h1>
       <nav class="breadcrumbs">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><img src="assets/images/about/arrow.png" alt=""></li>
-          <li aria-current="page"> services</li>
+          <li aria-current="page"> Services</li>
         </ul>
       </nav>
 
