--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                 <a href="service.html" class="nav-link-item">Nos services</a>
               </li>
               <li class="nav-item">
-                <a href="mailto:contact@adnagile.com" class="nav-link-item">Notre philosophie</a>
+                <a href="service.html"  class="nav-link-item">Notre philosophie</a>
               </li>
               <li class="nav-item">
-                <a href="mailto:contact@adnagile.com" class="nav-link-item">Notre histoire</a>
+                <a href="about-us.html" class="nav-link-item">Notre histoire</a>
               </li>
           </nav>
         </div>
