--- a/about-us.html
+++ b/about-us.html
@@ -64,7 +64,8 @@
 
 
 
-  <header class="site-header sofax-header-section site-header--menu-center bg-white" id="sticky-menu">
+
+  <header class="site-header sofax-header-section site-header--menu-center" id="sticky-menu">
     <div class="container">
       <nav class="navbar site-navbar">
 
@@ -94,10 +95,10 @@
                 <a href="service.html" class="nav-link-item">Nos services</a>
               </li>
               <li class="nav-item">
-                <a href="mailto:contact@adnagile.com" class="nav-link-item">Notre philosophie</a>
+                <a href="https://www.youtube.com/@AdnAgile-k5w"  class="nav-link-item" >Notre chaine Youtube</a>
               </li>
               <li class="nav-item">
-                <a href="mailto:contact@adnagile.com" class="nav-link-item">Notre histoire</a>
+                <a href="about-us.html" class="nav-link-item">Notre histoire</a>
               </li>
           </nav>
         </div>
@@ -146,8 +147,8 @@
           </div>
         </div>
       </div>
-      <div class="sofax-aboutus-thumb wow fadeInUpX">
-        <img src="assets/images/v5/grandzoho.webp" alt="">
+      <div class="sofax-aboutus-thumb wow fadeInUpX ">
+        <img src="assets/images/v5/grandzoho.webp" alt="" style="max-width: 550px;">
 
 
       </div>
