--- a/service.html
+++ b/service.html
@@ -65,9 +65,9 @@
 
 
 
-  <header class="site-header sofax-header-section site-header--menu-center bg-white" id="sticky-menu">
-    <div class="container ">
-      <nav class="navbar site-navbar ">
+  <header class="site-header sofax-header-section site-header--menu-center" id="sticky-menu">
+    <div class="container">
+      <nav class="navbar site-navbar">
 
         <div class="brand-logo">
           <a href="index.html">
@@ -95,10 +95,10 @@
                 <a href="service.html" class="nav-link-item">Nos services</a>
               </li>
               <li class="nav-item">
-                <a href="mailto:contact@adnagile.com" class="nav-link-item">Notre philosophie</a>
+                <a href="https://www.youtube.com/@AdnAgile-k5w"  class="nav-link-item" >Notre chaine Youtube</a>
               </li>
               <li class="nav-item">
-                <a href="mailto:contact@adnagile.com" class="nav-link-item">Notre histoire</a>
+                <a href="about-us.html" class="nav-link-item">Notre histoire</a>
               </li>
           </nav>
         </div>
@@ -116,6 +116,7 @@
       </nav>
     </div>
   </header>
+
 
   <div class="sofax-breadcrumb">
     <div class="container">
