--- a/terms&condition.html
+++ b/terms&condition.html
@@ -93,10 +93,10 @@
                 <a href="service.html" class="nav-link-item">Nos services</a>
               </li>
               <li class="nav-item">
-                <a href="mailto:contact@adnagile.com" class="nav-link-item">Notre philosophie</a>
+                <a href="https://www.youtube.com/@AdnAgile-k5w"  class="nav-link-item" >Notre chaine Youtube</a>
               </li>
               <li class="nav-item">
-                <a href="mailto:contact@adnagile.com" class="nav-link-item">Notre histoire</a>
+                <a href="about-us.html" class="nav-link-item">Notre histoire</a>
               </li>
           </nav>
         </div>
@@ -114,6 +114,7 @@
       </nav>
     </div>
   </header>
+
 
 
   <div class="sofax-breadcrumb">
