--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <a href="service.html" class="nav-link-item">Nos services</a>
               </li>
               <li class="nav-item">
-                <a href="service.html"  class="nav-link-item">Notre philosophie</a>
+                <a href="https://www.youtube.com/@AdnAgile-k5w"  class="nav-link-item" >Notre chaine Youtube</a>
               </li>
               <li class="nav-item">
                 <a href="about-us.html" class="nav-link-item">Notre histoire</a>
