--- a/service.html
+++ b/service.html
@@ -13,7 +13,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <!-- End google font  -->
-
+ 
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/bootstrap-icons.min.css">
   <link rel="stylesheet" href="assets/css/magnific-popup.css">
@@ -65,7 +65,7 @@
 
 
 
-  <header class="site-header sofax-header-section site-header--menu-center" id="sticky-menu">
+  <header class="site-header sofax-header-section site-header--menu-center bg-light" id="sticky-menu">
     <div class="container">
       <nav class="navbar site-navbar">
 
@@ -95,10 +95,10 @@
                 <a href="service.html" class="nav-link-item">Nos services</a>
               </li>
               <li class="nav-item">
-                <a href="https://www.youtube.com/@AdnAgile-k5w"  class="nav-link-item" >Notre chaine Youtube</a>
+                <a href="https://www.youtube.com/@AdnAgile-k5w"  target="_blank"  class="nav-link-item" >Notre chaine Youtube</a>
               </li>
               <li class="nav-item">
-                <a href="about-us.html" class="nav-link-item">Notre histoire</a>
+                <a href="team.html" class="nav-link-item">Témoignages</a>
               </li>
           </nav>
         </div>
@@ -116,6 +116,7 @@
       </nav>
     </div>
   </header>
+
 
 
   <div class="sofax-breadcrumb">
