--- a/about-us.html
+++ b/about-us.html
@@ -65,7 +65,7 @@
 
 
 
-  <header class="site-header sofax-header-section site-header--menu-center" id="sticky-menu">
+  <header class="site-header sofax-header-section site-header--menu-center bg-light" id="sticky-menu">
     <div class="container">
       <nav class="navbar site-navbar">
 
@@ -95,10 +95,10 @@
                 <a href="service.html" class="nav-link-item">Nos services</a>
               </li>
               <li class="nav-item">
-                <a href="https://www.youtube.com/@AdnAgile-k5w"  class="nav-link-item" >Notre chaine Youtube</a>
+                <a href="https://www.youtube.com/@AdnAgile-k5w"  target="_blank"  class="nav-link-item" >Notre chaine Youtube</a>
               </li>
               <li class="nav-item">
-                <a href="about-us.html" class="nav-link-item">Notre histoire</a>
+                <a href="team.html" class="nav-link-item">Témoignages</a>
               </li>
           </nav>
         </div>
@@ -116,6 +116,7 @@
       </nav>
     </div>
   </header>
+
 
   <div class="sofax-breadcrumb">
     <div class="container">
