--- a/about-us.html
+++ b/about-us.html
@@ -148,8 +148,8 @@
           </div>
         </div>
       </div>
-      <div class="sofax-aboutus-thumb wow fadeInUpX ">
-        <img src="assets/images/v5/grandzoho.webp" alt="" style="max-width: 550px;">
+      <div class="sofax-aboutus-thumb wow fadeInUpX  text-center">
+        <a href="https://store.zoho.com/ResellerCustomerSignUp.do?id=40c81e070c440929965aafff3d81c168" target="_blank" rel="noopener noreferrer"><img src="assets/images/v5/grandzoho.webp" alt="" style="max-width: 550px;"></a>
 
 
       </div>
