--- a/index.html
+++ b/index.html
@@ -160,22 +160,28 @@
       </div>
       <div class="sofax-brand-slider">
         <div class="sofax-logo-icon-item" style="max-width: 200px;">
-          <img src="assets/images/v5/zoho crm.png" alt="">
+          <a href="https://store.zoho.com/ResellerCustomerSignUp.do?id=e599164911be7b53d6db2eb2e39be754" target="_blank" rel="noopener noreferrer"><img src="assets/images/v5/zoho crm.png" alt=""></a>
         </div>
         <div class="sofax-logo-icon-item" style="max-width: 200px;">
-          <img src="assets/images/v5/one2.svg" alt="">
+          <a href="https://store.zoho.com/ResellerCustomerSignUp.do?id=40c81e070c440929965aafff3d81c168" target="_blank" rel="noopener noreferrer"><img src="assets/images/v5/one2.svg" alt=""></a>
         </div>
         <div class="sofax-logo-icon-item" style="max-width: 200px;">
-          <img src="assets/images/v5/zoho recruit.png" alt="">
+          <a href="https://store.zoho.com/ResellerCustomerSignUp.do?id=fdeebcdf19c35284d6c2ab882e6f2e44" target="_blank" rel="noopener noreferrer"><img src="assets/images/v5/zoho recruit.png" alt=""></a>
         </div>
         <div class="sofax-logo-icon-item" style="max-width: 200px;">
-          <img src="assets/images/v5/zoho sprint.jpg" alt="">
+          <a href="https://store.zoho.com/ResellerCustomerSignUp.do?id=7bc0502999f2847114b6ac5d69ac336a" target="_blank" rel="noopener noreferrer"><img src="assets/images/v5/zoho sprint.jpg" alt=""></a>
         </div>
         <div class="sofax-logo-icon-item" style="max-width: 200px;">
-          <img src="assets/images/v5/survey2.svg" alt="">
+          <a href="https://store.zoho.com/ResellerCustomerSignUp.do?id=38fc449c00a8d0422e3f2e43f4bace50" target="_blank" rel="noopener noreferrer"><img src="assets/images/v5/survey2.svg" alt=""></a>
         </div>
       </div>
     </div>
+  </div>
+  <div class="sofax-aboutus-thumb wow fadeInUpX  text-center d-flex flex-column">
+    <a href="https://store.zoho.com/ResellerCustomerSignUp.do?id=40c81e070c440929965aafff3d81c168" target="_blank" rel="noopener noreferrer"><img src="assets/images/v5/grandzoho.webp" alt="" style="max-width: 350px;"></a>
+    <a href="https://store.zoho.com/ResellerCustomerSignUp.do?id=40c81e070c440929965aafff3d81c168" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-primary  text-center mt-3" style="max-width: 150px; color: green !important;">Essayer Zoho</button></a>
+
+
   </div>
   <!-- end hero section -->
   <section class=" section sofax-section-padding bg-light">
