--- a/terms&condition.html
+++ b/terms&condition.html
@@ -93,10 +93,10 @@
                 <a href="service.html" class="nav-link-item">Nos services</a>
               </li>
               <li class="nav-item">
-                <a href="https://www.youtube.com/@AdnAgile-k5w"  class="nav-link-item" >Notre chaine Youtube</a>
+                <a href="https://www.youtube.com/@AdnAgile-k5w"  target="_blank"  class="nav-link-item" >Notre chaine Youtube</a>
               </li>
               <li class="nav-item">
-                <a href="about-us.html" class="nav-link-item">Notre histoire</a>
+                <a href="team.html" class="nav-link-item">Témoignages</a>
               </li>
           </nav>
         </div>
