--- a/service.html
+++ b/service.html
@@ -208,6 +208,12 @@
       </div>
     </div>
   </section>
+  <div class="sofax-aboutus-thumb wow fadeInUpX  text-center d-flex flex-column" style="margin-bottom: 2%;">
+    <a href="https://store.zoho.com/ResellerCustomerSignUp.do?id=40c81e070c440929965aafff3d81c168" target="_blank" rel="noopener noreferrer"><img src="assets/images/v5/grandzoho.webp" alt="" style="max-width: 350px;"></a>
+    <a href="https://store.zoho.com/ResellerCustomerSignUp.do?id=40c81e070c440929965aafff3d81c168" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-primary  text-center mt-3" style="max-width: 150px; color: green !important;">Essayer Zoho</button></a>
+
+
+  </div>
   <!-- end section -->
   <section class="sofax-service-slider">
     <div class="sofax-slider-service-section">
