--- a/team.html
+++ b/team.html
@@ -148,7 +148,7 @@
           <a href="single-team.html">
             <div class="sofax-team-member-wrap sofax-team-member-aboutus">
               <div class="sofax-team-member-img wow fadeInUpX" data-wow-delay="0.1s">
-                <img src="assets/images/v5/restaliance.jpg" alt="">
+                <img src="assets/images/v5/restaliance.jpg" style="max-width: 250px;" alt="">
               </div>
               <div class="sofax-team-member-content">
                 <a href="assets/images/v5/Case story - Restalliance.pdf" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-success">En savoir plus</button></a>
@@ -162,10 +162,20 @@
           <a href="single-team.html">
             <div class="sofax-team-member-wrap">
               <div class="sofax-team-member-img wow fadeInUpX" data-wow-delay="0.3s">
-                <img src="assets/images/v5/Neshu.png" alt="">
+                <img src="assets/images/v5/Neshu.png" style="max-width: 250px;"alt="">
               </div>
               <div class="sofax-team-member-content">
                 <a href="assets/images/v5/Case story - Neshu.pdf" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-success">En savoir plus</button></a>
+              </div>
+            </div>
+          </a>
+          <a href="single-team.html">
+            <div class="sofax-team-member-wrap">
+              <div class="sofax-team-member-img wow fadeInUpX" data-wow-delay="0.3s">
+                <img src="assets/images/v5/sport2000.png" style="max-width: 250px;" alt="">
+              </div>
+              <div class="sofax-team-member-content">
+                <a href="assets/images/v5/Case story - Sport 2000.pdf" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-success">En savoir plus</button></a>
               </div>
             </div>
           </a>
@@ -176,7 +186,7 @@
           <a href="single-team.html">
             <div class="sofax-team-member-wrap sofax-team-member-aboutus">
               <div class="sofax-team-member-img wow fadeInUpX" data-wow-delay="0.5s">
-                <img src="assets/images/v5/pilott.jpg" alt="">
+                <img src="assets/images/v5/pilott.jpg" style="max-width: 250px;" alt="">
               </div>
               <div class="sofax-team-member-content">
                 <a href="assets/images/v5/Case story - Pilott.pdf" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-success">En savoir plus</button></a>
@@ -189,7 +199,7 @@
           <a href="single-team.html">
             <div class="sofax-team-member-wrap">
               <div class="sofax-team-member-img wow fadeInUpX" data-wow-delay="0.7s">
-                <img src="assets/images/v5/altea.png" alt="">
+                <img src="assets/images/v5/altea.png" style="max-width: 250px;" alt="">
               </div>
               <div class="sofax-team-member-content">
                 <a href="assets/images/v5/Case story - Altéa.pdf" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-success">En savoir plus</button></a>
